fix: scrollbar and readme update

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,23 +13,26 @@ body {
     --sb-track-color: #191722;
     --sb-thumb-color: #d6b8fe;
     --sb-size: 6px;
-
-    scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
 }
 
 ::-webkit-scrollbar {
     width: var(--sb-size);
-    height: var(--sb-size);
 }
 
 ::-webkit-scrollbar-track {
     background: var(--sb-track-color);
-    border-radius: 6px;
+    border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
     background: var(--sb-thumb-color);
-    border-radius: 6px;
+    border-radius: 5px;
+}
+
+@supports not selector(::-webkit-scrollbar) {
+    body {
+        scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+    }
 }
 
 @keyframes up-down {
